solucion issues